--- a/Projeto/src/main/webapp/Cadastro.html
+++ b/Projeto/src/main/webapp/Cadastro.html
@@ -3,12 +3,20 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Cadastro de Aluno</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+  <script>
+  $( function() {
+    $( "#datepicker" ).datepicker({dateFormat:"dd/mm/yy"});
+  } );
+  </script>
 </head>
 <body>
 <form action="cadastrarAluno" method="post">
 RA:<input type="text" name="ra"/><br/>
 Nome:<input type="text" name="nome"><br/>
-data de nascimento:<input type="text" name="dataNascimento"/><br/>
+data de nascimento:<input type="text" name="dataNascimento" id="datepicker"/><br/>
 renda: <input type="text" name="renda"/><br/>
 email: <input type="text" name="email"/><br/>
 <input type="submit" value="Enviar"/>
