--- a/Projeto/src/main/webapp/Cadastro.html
+++ b/Projeto/src/main/webapp/Cadastro.html
@@ -13,12 +13,13 @@
   </script>
 </head>
 <body>
-<form action="cadastrarAluno" method="post">
+<form action="ServletControle" method="post">
 RA:<input type="text" name="ra"/><br/>
 Nome:<input type="text" name="nome"><br/>
 data de nascimento:<input type="text" name="dataNascimento" id="datepicker"/><br/>
 renda: <input type="text" name="renda"/><br/>
 email: <input type="text" name="email"/><br/>
+<input type="hidden" name="op" value="Cadastro">
 <input type="submit" value="Enviar"/>
 </form>
 <a href='/Projeto'>voltar ao menu</a>
