Complementação do MVC

--- a/Projeto/src/main/webapp/index.html
+++ b/Projeto/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 <h1>Página inicial do projeto</h1>
 <a href="alunos">Lista de Alunos</a><br/>
 <a href="alunos.jsp">Lista de Alunos (JSP)</a><br/>
-<a href="alunos1.jsp">Lista de Alunos (taglib)</a><br/>
+<a href="ServletControle?op=Listar">Lista de Alunos (taglib)</a><br/>
 <a href="Cadastro.html">Cadastro</a>
 </body>
 </html>
